# ClipVault

./: .gitattributes  .gitignore  LICENSE  README.md  package.json  pnpm-lock.yaml  vite.config.ts
docs/: ARCHITECTURE.md  RELEASE_CHECKLIST.md
src/: App.tsx  api.ts  mockData.ts  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: clipboard.rs  commands.rs  crypto.rs  hotkey.rs  main.rs  models.rs  ocr.rs  privacy.rs  storage.rs  window_anim.rs
