[package]
name = "clipvault"
version = "0.1.0"
description = "A modern lightweight clipboard history manager for Windows."
authors = ["Amirsalar Saberi rad"]
license = "UNLICENSED"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
arboard = { version = "3", features = ["image-data"] }
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
directories = "5"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
rusqlite = { version = "0.32", features = ["bundled-sqlcipher-vendored-openssl", "chrono"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-opener = "2"
tauri-plugin-single-instance = "2"
thiserror = "1"
uuid = { version = "1", features = ["v4", "serde"] }
winreg = "0.52"
windows = { version = "0.58", features = [
  "Foundation",
  "Foundation_Collections",
  "Globalization",
  "Graphics_Imaging",
  "Media_Ocr",
  "Storage_Streams",
  "Win32_Foundation",
  "Win32_Security_Cryptography",
  "Win32_System_DataExchange",
  "Win32_System_Memory",
  "Win32_System_Threading",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_Shell",
  "Win32_UI_WindowsAndMessaging"
] }
